force-app/main/default/objects/AppeasementItem__c/AppeasementItem__c.object-meta.xml
<CustomObject>
    <description
  >an adjustment on an OrderItem as part of an Appeasement</description>
    <label>Appeasement Item</label>
    <nameField>
        <displayFormat>AI{000000}</displayFormat>
        <label>AppeasementItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appeasement Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>