force-app/main/default/objects/AppeasementItem__c/fields/AdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentType__c</fullName>
    <defaultValue>&apos;AmountWithTax&apos;</defaultValue>
    <label>AdjustmentType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>