force-app/main/default/objects/AppeasementItem__c/fields/Appeasement__c.field-meta.xml
<CustomField>
    <fullName>Appeasement__c</fullName>
    <label>Appeasement</label>
    <referenceTo>Appeasement__c</referenceTo>
    <relationshipLabel>Appeasement Items</relationshipLabel>
    <relationshipName>Appeasement_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>