force-app/main/default/objects/AppeasementItem__c/fields/Order_Product_Summary__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OrderItemSummaryId</label>
    <referenceTo>OrderItemSummary</referenceTo>
    <relationshipLabel>Appeasement Items</relationshipLabel>
    <relationshipName>Appeasement_Items</relationshipName>
    <type>Lookup</type>
</CustomField>