force-app/main/default/objects/AppeasementItem__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <defaultValue>&apos;Default&apos;</defaultValue>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>